// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateModelConfig no providers available returns ULTIMATE_FALLBACK for all agents and categories when no providers 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "opencode/big-pickle",
    },
    "coder": {
      "model": "opencode/big-pickle",
    },
    "explorer": {
      "model": "opencode/big-pickle",
    },
    "navigator": {
      "model": "opencode/big-pickle",
    },
    "orchestrator": {
      "model": "opencode/big-pickle",
    },
    "planner": {
      "model": "opencode/big-pickle",
    },
    "researcher": {
      "model": "opencode/big-pickle",
    },
    "reviewer": {
      "model": "opencode/big-pickle",
    },
    "vision": {
      "model": "opencode/big-pickle",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/big-pickle",
    },
    "quick": {
      "model": "opencode/big-pickle",
    },
    "ultrabrain": {
      "model": "opencode/big-pickle",
    },
    "unspecified-high": {
      "model": "opencode/big-pickle",
    },
    "unspecified-low": {
      "model": "opencode/big-pickle",
    },
    "visual-engineering": {
      "model": "opencode/big-pickle",
    },
    "writing": {
      "model": "opencode/big-pickle",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models when only Claude is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "coder": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "explorer": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "navigator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "researcher": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "reviewer": {
      "model": "anthropic/claude-opus-4-5",
    },
    "vision": {
      "model": "anthropic/claude-haiku-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "coder": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "explorer": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "navigator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "researcher": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "reviewer": {
      "model": "anthropic/claude-opus-4-5",
    },
    "vision": {
      "model": "anthropic/claude-haiku-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models when only OpenAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "coder": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "explorer": {
      "model": "opencode/gpt-5-nano",
    },
    "navigator": {
      "model": "openai/gpt-5.2",
    },
    "orchestrator": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "planner": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "researcher": {
      "model": "opencode/big-pickle",
    },
    "reviewer": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "vision": {
      "model": "openai/gpt-5.2",
    },
  },
  "categories": {
    "artistry": {
      "model": "openai/gpt-5.2",
    },
    "quick": {
      "model": "opencode/big-pickle",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "writing": {
      "model": "openai/gpt-5.2",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "coder": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "explorer": {
      "model": "opencode/gpt-5-nano",
    },
    "navigator": {
      "model": "openai/gpt-5.2",
    },
    "orchestrator": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "planner": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "researcher": {
      "model": "opencode/big-pickle",
    },
    "reviewer": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "vision": {
      "model": "openai/gpt-5.2",
    },
  },
  "categories": {
    "artistry": {
      "model": "openai/gpt-5.2",
    },
    "quick": {
      "model": "opencode/big-pickle",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "writing": {
      "model": "openai/gpt-5.2",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models when only Gemini is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "google/gemini-3-pro",
    },
    "coder": {
      "model": "google/gemini-3-pro",
    },
    "explorer": {
      "model": "opencode/gpt-5-nano",
    },
    "navigator": {
      "model": "google/gemini-3-pro",
    },
    "orchestrator": {
      "model": "google/gemini-3-pro",
    },
    "planner": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "researcher": {
      "model": "opencode/big-pickle",
    },
    "reviewer": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "vision": {
      "model": "google/gemini-3-flash",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "google/gemini-3-flash",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro",
    },
    "unspecified-high": {
      "model": "google/gemini-3-flash",
    },
    "unspecified-low": {
      "model": "google/gemini-3-flash",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "google/gemini-3-pro",
    },
    "coder": {
      "model": "google/gemini-3-pro",
    },
    "explorer": {
      "model": "opencode/gpt-5-nano",
    },
    "navigator": {
      "model": "google/gemini-3-pro",
    },
    "orchestrator": {
      "model": "google/gemini-3-pro",
    },
    "planner": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "researcher": {
      "model": "opencode/big-pickle",
    },
    "reviewer": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "vision": {
      "model": "google/gemini-3-flash",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "google/gemini-3-flash",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro",
    },
    "unspecified-high": {
      "model": "google/gemini-3-pro",
    },
    "unspecified-low": {
      "model": "google/gemini-3-flash",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models from fallback chains when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "coder": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "explorer": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "navigator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "researcher": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "reviewer": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "vision": {
      "model": "google/gemini-3-flash",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models with isMax20 flag when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "coder": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "explorer": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "navigator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "researcher": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "reviewer": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "vision": {
      "model": "google/gemini-3-flash",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models when only OpenCode Zen is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "coder": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "explorer": {
      "model": "opencode/claude-haiku-4-5",
    },
    "navigator": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "orchestrator": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "planner": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "researcher": {
      "model": "opencode/big-pickle",
    },
    "reviewer": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "vision": {
      "model": "opencode/gemini-3-flash",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "coder": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "explorer": {
      "model": "opencode/claude-haiku-4-5",
    },
    "navigator": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "orchestrator": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "planner": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "researcher": {
      "model": "opencode/big-pickle",
    },
    "reviewer": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "vision": {
      "model": "opencode/gemini-3-flash",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models when only Copilot is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "coder": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "explorer": {
      "model": "github-copilot/gpt-5-mini",
    },
    "navigator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "orchestrator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "researcher": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "reviewer": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "vision": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "coder": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "explorer": {
      "model": "github-copilot/gpt-5-mini",
    },
    "navigator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "orchestrator": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "researcher": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "reviewer": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "vision": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for researcher when only ZAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "opencode/big-pickle",
    },
    "coder": {
      "model": "opencode/big-pickle",
    },
    "explorer": {
      "model": "opencode/gpt-5-nano",
    },
    "navigator": {
      "model": "opencode/big-pickle",
    },
    "orchestrator": {
      "model": "opencode/big-pickle",
    },
    "planner": {
      "model": "opencode/big-pickle",
    },
    "researcher": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "reviewer": {
      "model": "opencode/big-pickle",
    },
    "vision": {
      "model": "zai-coding-plan/glm-4.6v",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/big-pickle",
    },
    "quick": {
      "model": "opencode/big-pickle",
    },
    "ultrabrain": {
      "model": "opencode/big-pickle",
    },
    "unspecified-high": {
      "model": "opencode/big-pickle",
    },
    "unspecified-low": {
      "model": "opencode/big-pickle",
    },
    "visual-engineering": {
      "model": "opencode/big-pickle",
    },
    "writing": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for researcher with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "opencode/big-pickle",
    },
    "coder": {
      "model": "opencode/big-pickle",
    },
    "explorer": {
      "model": "opencode/gpt-5-nano",
    },
    "navigator": {
      "model": "opencode/big-pickle",
    },
    "orchestrator": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "planner": {
      "model": "opencode/big-pickle",
    },
    "researcher": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "reviewer": {
      "model": "opencode/big-pickle",
    },
    "vision": {
      "model": "zai-coding-plan/glm-4.6v",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/big-pickle",
    },
    "quick": {
      "model": "opencode/big-pickle",
    },
    "ultrabrain": {
      "model": "opencode/big-pickle",
    },
    "unspecified-high": {
      "model": "opencode/big-pickle",
    },
    "unspecified-low": {
      "model": "opencode/big-pickle",
    },
    "visual-engineering": {
      "model": "opencode/big-pickle",
    },
    "writing": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + OpenCode Zen combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "coder": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "explorer": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "navigator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "researcher": {
      "model": "opencode/big-pickle",
    },
    "reviewer": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "vision": {
      "model": "opencode/gemini-3-flash",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses OpenAI + Copilot combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "coder": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "explorer": {
      "model": "github-copilot/gpt-5-mini",
    },
    "navigator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "orchestrator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "researcher": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "reviewer": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "vision": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + ZAI combination (researcher uses ZAI) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "coder": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "explorer": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "navigator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "researcher": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "reviewer": {
      "model": "anthropic/claude-opus-4-5",
    },
    "vision": {
      "model": "zai-coding-plan/glm-4.6v",
    },
  },
  "categories": {
    "artistry": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Gemini + Claude combination (explore uses Gemini) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "coder": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "explorer": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "navigator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "researcher": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "reviewer": {
      "model": "anthropic/claude-opus-4-5",
    },
    "vision": {
      "model": "google/gemini-3-flash",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all fallback providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "coder": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "explorer": {
      "model": "opencode/claude-haiku-4-5",
    },
    "navigator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "orchestrator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "researcher": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "reviewer": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "vision": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "coder": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "explorer": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "navigator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "researcher": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "reviewer": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "vision": {
      "model": "google/gemini-3-flash",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/aurora-freedom-project/omo-cli/master/assets/omo-cli.schema.json",
  "agents": {
    "advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "coder": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "explorer": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "navigator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "researcher": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "reviewer": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "vision": {
      "model": "google/gemini-3-flash",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;
": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;
